# ai-chat-assistance-platform-data-migration-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  test-mg.py
app/: config.py  main.py
app/api/: routes.py
app/api/endpoints/: __init__.py  admin.py  migrations.py  status.py
app/core/: exceptions.py  logging.py
app/utils/: database.py
docs/: implementation-plan.md  implementation-structure.md
tests/: conftest.py
